--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "history": "^4.7.2",
+    "material-components-web": "^0.23.0",
+    "normalize.css": "^7.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^2.2.2"
   },
   "scripts": {
     "bootstrap": "run() { node ./scripts/bootstrap.js \"$1\" && yarn install && yarn start; }; run",
