Update project name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Healthcare",
-  "name": "Healthcare",
+  "short_name": "Epicare",
+  "name": "Epicare",
   "icons": [
     {
       "src": "favicon.ico",
