--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "^1.0.13"
   },
   "dependencies": {
+    "@material/tabs": "^0.23.0",
     "history": "^4.7.2",
     "material-components-web": "^0.23.0",
     "normalize.css": "^7.0.0",
