--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material/tabs": "^0.23.0",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "material-components-web": "^0.23.0",
     "normalize.css": "^7.0.0",
     "react": "^16.0.0",
