--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material/tabs": "^0.23.0",
+    "date-fns": "^1.29.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "material-components-web": "^0.23.0",
