--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material/tabs": "^0.23.0",
     "@material/textfield": "^0.23.0",
     "date-fns": "^1.29.0",
+    "firebase": "^4.6.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "material-components-web": "^0.23.0",
