--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material/button": "^0.23.0",
+    "@material/dialog": "^0.23.0",
     "@material/select": "^0.23.0",
     "@material/tabs": "^0.23.0",
     "@material/textfield": "^0.23.0",
@@ -24,6 +25,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
+    "react-virtualized": "^9.12.0",
     "styled-components": "^2.2.2"
   },
   "scripts": {
